--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -17,5 +17,8 @@ layout: default
     {{ content }}
   </div>
   
+  <script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script>
 
 </article>
